--- a/node/views/home.ejs
+++ b/node/views/home.ejs
@@ -71,7 +71,7 @@
 
   <main>
     <div class="content">
-      <form action="/queue" method="POST" style="width: 100%; text-align: center;">
+      <form action="/queue" method="GET" style="width: 100%; text-align: center;">
         <button type="submit">Enter Queue (Rated Game)</button>
       </form>
 
